--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <title>Application Documents - Konrad Grützmann</title>
 </head>
 <body>
-    <h2>Application Materials for Wissenschaftliche*r Mitarbeiter*in (m/w/d) Digitale Gesundheit </h2>
-    <p>Thank you for reviewing my application. Please find the relevant documents linked below:</p>
+    <h3>Application Materials for <br>"Wissenschaftliche*r Mitarbeiter*in (m/w/d) Digitale Gesundheit"</h3>
     <ul>
         <li><a href="CV_Gruetzmann_Prof_Kather.pdf" target="_blank">Curriculum Vitae (CV)</a></li>
         <li><a href="Anschreiben_Professor_Kather_Sep_2025.pdf" target="_blank">Cover Letter</a></li>
